# tia-tag-exporter

./: .gitignore  README.md  config.example.toml  config.example.yaml  pyproject.toml
docs/: report.md  review_fortschritt.md  setup-notes.md
src/config_loader/: __init__.py  exceptions.py  loader.py
src/my_logger/: __init__.py  exceptions.py  logger.py  schema.py
src/tia_tag_exporter/: __init__.py  config_schema.py  connector.py  exporter.py  extractor.py  gui.py  main.py  project_texts.py
